--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,34 @@ img {
 	width: 100%;
 	height: auto;
 }
+.img_wrapper{
+    position: relative;
+    padding-top: 75%;
+    margin-bottom: 40px;
+    background: #fafafa;
+    overflow: hidden;
+}
+
+.img_wrapper img{
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+  
+    -webkit-transition: opacity .5s;
+    -moz-transition: opacity .5s;
+    -ms-transition: opacity .5s;
+    transition: opacity .5s;
+}
+
+.img_wrapper.loaded img{
+    opacity: 1;
+}
+
+.img_wrapper.loaded .css_spinner{
+    display: none;
+}
 
 .center {
 	text-align: center;
