--- a/css/styles.css
+++ b/css/styles.css
@@ -52,12 +52,13 @@ header h6 {
 	overflow-wrap: break-word; 
 }
 img {
-	width: 100%;
+	max-width: 100%;
 	height: auto;
 }
 .img_wrapper{
     position: relative;
     overflow: hidden;
+    height 
 }
 
 .img_wrapper img{
@@ -65,7 +66,7 @@ img {
     width: 100%;
     top: 0;
     left: 0;
-    opacity: 0;
+    opacity: 1;
   
     -webkit-transition: opacity .5s;
     -moz-transition: opacity .5s;
